:bookmark: Update docs and bump version

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -31,3 +31,15 @@
   year      = {2026},
 
 }
+
+@article{lv2024active,
+  title     = {Active hole formation in epithelioid tissues},
+  author    = {Lv, Jian-Qing and Chen, Peng-Cheng and Chen, Yun-Ping and Liu, Hao-Yu and others},
+  journal   = {Nature Physics},
+  volume    = {20},
+  number    = {8},
+  pages     = {1313--1323},
+  year      = {2024},
+  publisher = {Nature Publishing Group UK London},
+  doi = {10.1038/s41567-024-02504-1}
+}
