:memo: Update paper.md and paper.bib

--- a/docs/paper/paper.bib
+++ b/docs/paper/paper.bib
@@ -1,69 +1,202 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
+@article{teomy2018confluent,
+  title     = {Confluent and nonconfluent phases in a model of cell tissue},
+  author    = {Teomy, Eial and Kessler, David A. and Levine, Herbert},
+  journal   = {Phys. Rev. E},
+  volume    = {98},
+  issue     = {4},
+  pages     = {042418},
+  numpages  = {14},
+  year      = {2018},
+  month     = {Oct},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevE.98.042418}
 }
 
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
+@article{huang2023bridging,
+  title     = {Bridging the gap between collective motility and epithelial--mesenchymal transitions through the active finite voronoi model},
+  author    = {Huang, Junxiang and Levine, Herbert and Bi, Dapeng},
+  journal   = {Soft Matter},
+  volume    = {19},
+  number    = {48},
+  pages     = {9389--9398},
+  year      = {2023},
+  publisher = {Royal Society of Chemistry},
+  doi       = {10.1039/D3SM00327B}
 }
 
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
+@article{wang2026divergence,
+  title   = {Divergence of detachment forces in the finite-Voronoi model, manuscript in preparation},
+  author  = {Wang, Wei and Camley, Brian A},
+  journal = {manuscript in preparation},
+  year    = {2026}
 }
 
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
-    month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
+@article{lv2024active,
+  title     = {Active hole formation in epithelioid tissues},
+  author    = {Lv, Jian-Qing and Chen, Peng-Cheng and Chen, Yun-Ping and Liu, Hao-Yu and others},
+  journal   = {Nature Physics},
+  volume    = {20},
+  number    = {8},
+  pages     = {1313--1323},
+  year      = {2024},
+  publisher = {Nature Publishing Group UK London},
+  doi       = {10.1038/s41567-024-02504-1}
 }
 
-@article{Hunt:2025,
-  author = {{Hunt}, Jason A.~S. and {Vasiliev}, Eugene},
-  title = {Milky Way dynamics in light of Gaia},
-  journal = {New Astronomy Reviews},
-  year = 2025,
-  volume = 98,
-  doi = {10.1016/j.newar.2024.101721},
-  url = {https://www.sciencedirect.com/science/article/pii/S1387647324000289}
+@misc{wang2026pyafv,
+  title   = {`PyAFV' Documentation},
+  year    = {2026},
+  url     = {https://pyafv.readthedocs.io},
 }
 
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+@article{scipy2020,
+  title     = {SciPy 1.0: fundamental algorithms for scientific computing in Python},
+  author    = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E and Haberland, Matt and others},
+  journal   = {Nature methods},
+  volume    = {17},
+  number    = {3},
+  pages     = {261--272},
+  year      = {2020},
+  publisher = {Nature Publishing Group US New York},
+  doi       = {10.1038/s41592-019-0686-2}
+}
+
+@article{wang2025confinement,
+  title     = {Confinement, Jamming, and Adhesion in Cancer Cells Dissociating from a Collectively Invading Strand},
+  author    = {Wang, Wei and Law, Robert A. and Perez Ipi\~na, Emiliano and Konstantopoulos, Konstantinos and Camley, Brian A.},
+  journal   = {PRX Life},
+  volume    = {3},
+  issue     = {1},
+  pages     = {013012},
+  numpages  = {20},
+  year      = {2025},
+  month     = {Feb},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PRXLife.3.013012}
+}
+
+@article{wang2025controlling,
+  title   = {Controlling tissue size by active fracture},
+  author  = {Wang, Wei and Camley, Brian A},
+  journal = {arXiv preprint arXiv:2503.03126},
+  year    = {2025},
+  url     = {https://doi.org/10.48550/arXiv.2503.03126}
+}
+
+@article{bi2016motility,
+  title     = {Motility-Driven Glass and Jamming Transitions in Biological Tissues},
+  author    = {Bi, Dapeng and Yang, Xingbo and Marchetti, M. Cristina and Manning, M. Lisa},
+  journal   = {Phys. Rev. X},
+  volume    = {6},
+  issue     = {2},
+  pages     = {021011},
+  numpages  = {13},
+  year      = {2016},
+  month     = {Apr},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevX.6.021011}
+}
+
+@article{boromand2018jamming,
+  title     = {Jamming of Deformable Polygons},
+  author    = {Boromand, Arman and Signoriello, Alexandra and Ye, Fangfu and O'Hern, Corey S. and Shattuck, Mark D.},
+  journal   = {Phys. Rev. Lett.},
+  volume    = {121},
+  issue     = {24},
+  pages     = {248003},
+  numpages  = {5},
+  year      = {2018},
+  month     = {Dec},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevLett.121.248003}
+}
+
+@article{chiang2024intercellular,
+  title     = {Intercellular friction and motility drive orientational order in cell monolayers},
+  author    = {Chiang, Michael and Hopkins, Austin and Loewe, Benjamin and Marchetti, M Cristina and Marenduzzo, Davide},
+  journal   = {Proc. Natl. Acad. Sci. USA},
+  volume    = {121},
+  number    = {40},
+  pages     = {e2319310121},
+  year      = {2024},
+  publisher = {National Academy of Sciences},
+  doi       = {10.1073/pnas.2319310121}
+}
+
+@article{bi2015density,
+  title     = {A density-independent rigidity transition in biological tissues},
+  author    = {Bi, Dapeng and Lopez, JH and Schwarz, Jennifer M and Manning, M Lisa},
+  journal   = {Nature Physics},
+  volume    = {11},
+  number    = {12},
+  pages     = {1074--1079},
+  year      = {2015},
+  publisher = {Nature Publishing Group UK London},
+  doi       = {10.1038/nphys3471}
+}
+
+@article{levine2000self,
+  title     = {Self-organization in systems of self-propelled particles},
+  author    = {Levine, Herbert and Rappel, Wouter-Jan and Cohen, Inon},
+  journal   = {Phys. Rev. E},
+  volume    = {63},
+  issue     = {1},
+  pages     = {017101},
+  numpages  = {4},
+  year      = {2000},
+  month     = {Dec},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevE.63.017101}
+}
+
+@article{chiang2024multiphase,
+  title     = {Multiphase field model of cells on a substrate: From three dimensional to two dimensional},
+  author    = {Chiang, Michael and Hopkins, Austin and Loewe, Benjamin and Marenduzzo, Davide and Marchetti, M. Cristina},
+  journal   = {Phys. Rev. E},
+  volume    = {110},
+  issue     = {4},
+  pages     = {044403},
+  numpages  = {15},
+  year      = {2024},
+  month     = {Oct},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevE.110.044403}
+}
+
+@article{park2015unjamming,
+  title     = {Unjamming and cell shape in the asthmatic airway epithelium},
+  author    = {Park, Jin-Ah and Kim, Jae Hun and Bi, Dapeng and Mitchel, Jennifer A and Qazvini, Nader Taheri and Tantisira, Kelan and Park, Chan Young and McGill, Maureen and Kim, Sae-Hoon and Gweon, Bomi and others},
+  journal   = {Nature materials},
+  volume    = {14},
+  number    = {10},
+  pages     = {1040--1048},
+  year      = {2015},
+  publisher = {Nature Publishing Group UK London},
+  doi       = {10.1038/nmat4357}
+}
+
+@article{fily2012athermal,
+  title     = {Athermal Phase Separation of Self-Propelled Particles with No Alignment},
+  author    = {Fily, Yaouen and Marchetti, M. Cristina},
+  journal   = {Phys. Rev. Lett.},
+  volume    = {108},
+  issue     = {23},
+  pages     = {235702},
+  numpages  = {5},
+  year      = {2012},
+  month     = {Jun},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevLett.108.235702}
+}
+
+@article{henkes2020dense,
+  title     = {Dense active matter model of motion patterns in confluent cell monolayers},
+  author    = {Henkes, Silke and Kostanjevec, Kaja and Collinson, J Martin and Sknepnek, Rastko and Bertin, Eric},
+  journal   = {Nature communications},
+  volume    = {11},
+  number    = {1},
+  pages     = {1405},
+  year      = {2020},
+  publisher = {Nature Publishing Group UK London},
+  doi       = {10.1038/s41467-020-15164-5}
 }
