:memo: Adjust bib format for author list

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -34,7 +34,7 @@
 
 @article{lv2024active,
   title     = {Active hole formation in epithelioid tissues},
-  author    = {Lv, Jian-Qing and Chen, Peng-Cheng and Chen, Yun-Ping and Liu, Hao-Yu and others},
+  author    = {Lv, J.-Q. and Chen, P.-C. and Chen, Y.-P. and Liu, H.-Y. and Wang, S.-D. and Bai, J. and Lv, C.-L. and Li, Y. and Shao, Y. and Feng, X.-Q. and Li, B.},
   journal   = {Nature Physics},
   volume    = {20},
   number    = {8},
